5051/Content/Student.css
#student-icons a {
    color: #fff;
}

.background {
    background-image: url("../Content/img/sunset.png");
    background-position: center bottom;
    background-size: cover;
    width: 100%;
    padding-top: 30px;
    min-height: 800px;
    margin: 0 auto;
}

.scroll-bar-horz {
    position: absolute;
    border: none;
    width: 100%;
    height: 700px;
    overflow-y: hidden;
    overflow-x: scroll;
    margin: 10px;
    margin-top: 40px;
    margin-bottom: 20px;
}


.student-header {
    padding-top: 0px;
    font-size: 5.9vw;
}

#studentnavicons {
    position: absolute;
    left: 50%;
    top: 20%;
    font-size: calc(1.0vw + 1.0vh);
    transform: translate(-50%);
}

    #studentnavicons a {
        font-size: calc(2vw + 2vh);
        margin-left: 25px;
    }

.student-text-medium {
    margin-top: 5%;
    font-size: 3.5vh;
}

.student-text-small {
    margin-top: 3%;
    font-size: 2.0vh;
}

#wireframe-student {
    position: relative;
    margin-top: 50px;
    margin-bottom: 100px;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.avatar-block {
    margin-top: 100px;
}

.dog-container {
    position: relative;
    margin-bottom: 600px;
}

    .dog-container .dog {
        position: absolute;
        top: 10px;
        left: 600px;
        z-index: 1;
    }

#dog-block {
    display: inline-block;
}

.speech-bubble {
    display: inline-block;
    margin-right: 1000px;
    width: 400px;
}

.speech-bubble2 {
    display: none;
    margin-left: 1000px;
    width: 400px;
}

#market-pic {
    position: relative;
    margin-top: 100px;
    margin-bottom: 100px;
    display: block;
    margin-left: auto;
    margin-right: auto
}

.shop-scroll {
    display: inline;
    width: 100%;
    height: 100%;
    object-fit: contain;
}

.span5 {
    height: 600px;
    width: 1000px;
    position: center;
    display: inline-block;
    background-color: #fff;
    opacity: 0.7;
    padding: 10px;
    margin-top: 20px;
}

.student-report {
    position: relative;
    top: -580px;
    padding-left: 25px;
    margin-bottom: -580px;
}

